bin/gui/style.css
/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */


/* variables:
 * green: 	#40ba5e;
 * bg: 		#0e1f2b; 
 * btn bg: 	#636d72
 * 
 */

#root {
	-fx-font-family: "Open Sans";
	-fx-text-fill: #eeeeee;
	-fx-background-color: #0e1f2b;
}

ScrollPane, GridPane, Pane, StackPane {
	-fx-focus-color: transparent;
	-fx-background-color:transparent;
}

Label {
	-fx-padding: 4px 0 4px 0;
	-fx-font-size: 16px;
	-fx-text-fill: #eeeeee;
	-fx-fill: #eeeeee;
}

Label.error {
	-fx-padding: 0 0 0 0;
	-fx-text-fill: #ff8484;
	-fx-font-family: "Open Sans";
}

Label.grey {
	-fx-text-fill: #aaaaaa;
}

Label.light, 
Label.title, 
Label.title2 {
	-fx-font-family: "Open Sans Light";
}
Label.title{
	-fx-font-size: 34px;
}
Label.title2{
	-fx-font-size: 28px;
}

Label.italic {
	-fx-font-style: italic ;
	-fx-font-family: "Open Sans Italic";
}

Label.link {
	-fx-text-fill: #328cbc;
}

#yield {
	-fx-padding:24px 0px;
	-fx-background-color: #0e1f2b;
}

.smaller Label {
	-fx-font-size: 12px;
}

Button {
	-fx-background-color: #636d72;
	-fx-text-fill: #eeeeee;
	-fx-padding: 8px 24px;
	-fx-border-color: #eeeeee;
	-fx-border-radius: 3px;
	-fx-cursor: hand;
}

Button:hover {
	-fx-background-color: #33393c;
}


.yielded {
	
}

.movie-card {
	-fx-background-color: #444;
}

